tests/paczka2/big_fuzzy/29026823.err
Error in line 1: LTL A929 20,2
Error in line 5: SrrmkQ A929 9,7
Error in line 6: LTL A321 41,5
Error in line 4: zjr A370 75,0
Error in line 23: ak4na A321 6,4
Error in line 32: A929 A929 25,5
Error in line 39: SrrmkQ A370 77,1
Error in line 50: zjr A370 67,1
Error in line 53: vQ1EPg A847 82,4
Error in line 70: vQ1EPg A321 66,1
Error in line 72: zjr A321 17,3
Error in line 80: zjr A370 6,2
Error in line 74: SrrmkQ A321 47,0
Error in line 90: zjr A321 92,2
Error in line 88: SrrmkQ A929 95,1
Error in line 102: LTL A847 158,04
Error in line 100: zjr A847 92,6
Error in line 107: zjr A321 70,2
Error in line 87: 1xzn A321 6,4
Error in line 97: LTL A847 396,2
Error in line 117: ak4na A929 42,83
Error in line 122: A929 A929 80,5
Error in line 124: A929 A847 40,7
Error in line 118: ak4na A321 89,6
Error in line 139: 1xzn A929 -1,6
Error in line 138: vQ1EPg A847 93,7
Error in line 135: 1xzn A929 39,7
Error in line 143: SrrmkQ A847 48,5
Error in line 144: 1xzn A321 59,9
Error in line 160: A929 A370 48,6
Error in line 176: 1xzn A370 58,5
Error in line 181: SrrmkQ A321 85,8
Error in line 190: 1xzn A929 15,5
Error in line 201: vQ1EPg A847 44,4
Error in line 208: ak4na A847 54,9
Error in line 211: ak4na A370 245,41
Error in line 203: vQ1EPg A929 69,4
Error in line 221: zjr A370 -4,4
Error in line 209: LTL A321 6,1
Error in line 223: SrrmkQ A321 46,7
Error in line 225: vQ1EPg A370 233,9
Error in line 210: ak4na A370 74,5
Error in line 224: SrrmkQ A847 69,1
Error in line 238: SrrmkQ A321 7,1
Error in line 240: SrrmkQ A847 16,2
